--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
-    "forge": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
+    "node-forge": "^1.3.1",
     "nodemon": "^2.0.20",
-    "soap": "^0.45.0",
+    "soap": "^0.42.0",
     "xml2js": "^0.4.23"
   }
 }
