--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.0",
     "node-forge": "^1.3.1",
     "nodemon": "^2.0.20",
     "soap": "^0.42.0",
